Add Jasypt auto-detection, code cleanup, and deployment fixes
- Add JasyptConfig.java: auto-resolves master password from env var, system property, or jasypt-master-password.txt file (supports local dev and Ubuntu server)

- Update start-app.bat: reads Jasypt password from jasypt-master-password.txt

- Update deploy.bat: uploads jasypt-master-password.txt to server with secure permissions

- Update PublicController.java: modernize to use .toList() and Comparator.comparing()

- Update app.js: remove unused functions (processCelebrationsData, setupTVHolidaysHorizontal, startTVInfiniteScroll)

- Update config.js: add ENABLE_RANDOM_GALLERY and RANDOM_GALLERY_COUNT settings

- Update application.properties: Jasypt encrypted DB credentials

- Add fix-deploy.sh and AI-USAGE-REPORT.md